third_party/WebKit/Source/modules/webaudio/BaseAudioContext.cpp
@@ -519,7 +519,7 @@ OscillatorNode* BaseAudioContext::createOscillator(
     ExceptionState& exception_state) {
   DCHECK(IsMainThread());
 
-  return OscillatorNode::Create(*this, exception_state);
+  return OscillatorNode::Create(*this, "sine", nullptr, exception_state);
 }
 
 PeriodicWave* BaseAudioContext::createPeriodicWave(
